[ 이태현 ] 기능 수정: 마이페이지 사용자 정보 수정 관련 코드 수정
